--- a/src/app/counting/counting.component.html
+++ b/src/app/counting/counting.component.html
@@ -2,7 +2,7 @@
 <div>
     <h2>{{ title }}</h2>
     <div class="header">
-        My First time!! : Try out Counting Component 
+        My First time!!! : Try out Counting Component 
     </div>
 </div>
 <div>
